update doc index page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1022 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -29,13 +29,22 @@
                         <li><a href="monitor_tab.html">Monitoring an Application</a></li>
                         <li><a href="threads.html">Monitoring Application Threads</a></li>
                         <li><a href="profiler.html">Profiling Applications</a></li>
+                        <li><a href="jmx_connections.html">Connecting to JMX Agents Explicitly</a></li>
                     </ul>
                 
                 </li>
-                <li><a href="applications_remote.html">Working with Remote Applications</a></li>
+                <li><a href="applications_remote.html">Working with Remote Applications</a>
+                    <ul>
+                        <li><a href="overview_tab.html">Viewing Application Overview</a></li>
+                        <li><a href="monitor_tab.html">Monitoring an Application</a></li>
+                        <li><a href="threads.html">Monitoring Application Threads</a></li>
+                        <li><a href="jmx_connections.html">Connecting to JMX Agents Explicitly</a></li>
+                    </ul>
+                </li>
                 <li><a href="coredumps.html">Working with Coredumps</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
                 <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
+                <li><a href="jmx_connections.html">Connecting to JMX Agents Explicitly</a></li>
                 <li><a href="mbeans_tab.html">Working with MBeans</a></li>
                 <li><a href="jconsole_plugin_wrapper_tab.html">JConsole Plug-In Wrapper Tab</a></li>
               </ul>
