add images for core dump
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1023 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -88,5 +88,7 @@ JMX agents that are running in a target Java application, a means of creating ex
   <li><a target="_blank" href="http://java.sun.com/javase/6/docs/technotes/guides/management/">Monitoring and Management documentation for the Java SE Platform</a></li>
 </ul>
 <p>&nbsp;</p>
+<hr/>
+<p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 </body>
 </html>
