add links to index page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1027 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -80,10 +80,9 @@
 
         <h4>Profile an Application</h4>
         <p>VisualVM includes a profiler that enables you to analyze the performance and memory usage of a local application.
-        You can profile an application without restarting it.
-        </p>
-        <p>VisualVM cannot be used to Profile itself - only the Overview and Monitor
-        tabs are enabled when VisualVM is the chosen application.</p>
+        You can profile an application without restarting it. To start a profiling session, 
+        right-click the application node and choosing Profile from the popup menu to open the profiling tab.<br/>
+        <b>Note:</b> VisualVM cannot be used to Profile itself.</p>
         <p>For more see the following document:</p>
         <ul><li><a href="profiler.html">Profiling Applications</a></li></ul>
         
