--- a/www/jconsole_plugin_wrapper_tab.html
+++ b/www/jconsole_plugin_wrapper_tab.html
@@ -42,5 +42,8 @@
   <p><img src="images/docs/jtop-plugin.png" alt="The JConsole plugin tab, showing the JTop plug-in."/>
   <p>The JTop tab has been added, showing the CPU usage of the various threads running.  
 </ol>
+<hr/>
+<p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
+
 </body>
 </html>
