--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -100,6 +100,8 @@ com.sun.example:type=Triangle,side=isosceles,name=3</pre>
 <p>VisualVM's MBeans tab also allows you to tell the HotSpot VM to  perform a heap dump, and to get or set a VM option via  the <span class="style1">HotSpotDiagnostic</span> platform MBean.</p>
 <img src="images/docs/mbean-hotspot.png" alt="Performing heap dumps using the HotSpot VM Diagnostic MBean."/>
 <p>You can perform a heap dump manually by invoking the <span class="style1">com.sun.management.HotSpotDiagnostic</span> MBean's  <span class="style1">dumpHeap</span> operation.  In addition, you can specify the <span class="style1">HeapDumpOnOutOfMemoryError</span> Java VM option using  the <span class="style1">setVMOption</span> operation, so that the VM performs a heap dump automatically whenever  it receives an <span class="style1">OutOfMemoryError</span>.</p>
+<hr/>
+<p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
 </body>
 </html>
