--- a/www/profiler.html
+++ b/www/profiler.html
@@ -105,5 +105,9 @@
         title="screenshot of CPU profiling snapshot" />
         
         <p>For more, see <a href="snapshots.html">Working with Snapshots</a></p>
+        
+        <hr/>
+        <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
+
     </body>
 </html>
