add links to index page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1029 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/intro.html
+++ b/www/intro.html
@@ -97,6 +97,8 @@
             <!--<li><a href="plugins.html">Working with VisualVM Plugins</a></li>-->
             <li><a href="api-quickstart.html">Getting Started Extending VisualVM</a></li>
         </ul>
+        <hr/>
+        <p><a href="docindex.html">Return to the VisualVM Documentation index</a></p>
 
         
     </body>
