minor typo fixes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1030 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -18,7 +18,7 @@
         </ul>
         
         <h2>VisualVM Documentation</h2>
-        <p>The following documents provide information on how to work with the features of VisualVM</p>
+        <p>The following documents provide information on how to work with VisualVM.</p>
         <ul>
             <li><a href="intro.html">Introduction to VisualVM</a>
                 <ul>
