minor typo fixes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1031 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_window.html
+++ b/www/applications_window.html
@@ -26,8 +26,8 @@
             <p>The Local node displays the name and process IDs (PID) of Java applications that are running on the same system as VisualVM.
             When you launch VisualVM and expand the Local node, VisualVM automatically displays the currently running Java applications.
             VisualVM is always listed as one of the local applications.
-            When a local Java application is launched, a node for that application appears under the Local node.
-            The application node is removed when the application terminates.</p>
+            When a new local Java application is launched, a node for that application appears under the Local node.
+            The application node disappears when the application terminates.</p>
             
             <p>If you use VisualVM to take thread dumps, heap dumps or profiling snapshots of an application, 
             they are displayed as sub-nodes below the node for that application.
