minor typo fixes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1035 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/coredumps.html
+++ b/www/coredumps.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Working with Core Dumps</title>
+        <title>Working with Core Dumps in VisualVM</title>
         <link rel="stylesheet" type="text/css" href="default.css" />
     </head>
     <body>
@@ -10,7 +10,7 @@
         The Applications also displays core dumps and profiling snapshots saved to your local system.</p>
         
         <p>The Core Dump node is visible in the Applications window if VisualVM is running on Solaris or Linux.
-        Generally, VisualVm can only open a core dump if the core dump was taken on the same machine.
+        Generally, VisualVM can only open a core dump if the core dump was taken on the same machine.
         A core dump contains informaton on the JDK and kernel of the machine where the core dump was taken.
         To open the core dump in VisualVM, this information must match the JDK and kernel of the local system.
         </p>
