Testing if project_tools.html works for visualvm workspace (2).
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1037 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,7 +1,6 @@
-</dd>
-<div><a href="https://visualvm.dev.java.net">Test</a></div>
 <script>
 addLoadEvent(function() {
-	document.write("test");
+    var left = document.getElementById("navcol");
+    left.style.display = "none";
 });
 </script>
