Testing if project_tools.html works for visualvm workspace (3).
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1038 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,6 +1,6 @@
 <script>
 addLoadEvent(function() {
-    var left = document.getElementById("navcol");
+    var left = document.getElementById("breadcrumbs");
     left.style.display = "none";
 });
 </script>
