Testing if project_tools.html works for visualvm workspace (5).
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1040 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,3 +1,4 @@
+<script>document.getElementById("main").parentNode.style.display="none";</script>
 <script>
 window.onload = function() {
     var left = document.getElementById("breadcrumbs");
