new section on wizards
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1053 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -81,8 +81,8 @@
                             <li><a href="#trouble">Troubleshooting</a></li>
                             <li><a name="#wizard">Using VisualVM File Wizards</a></li>
                             <ul>
-                              <li><a name="wizard-1">Using the VisualVM View Template</a></li>
-                              <li><a name="wizard-2">Using the VisualVM Application Type Template</a></li>
+                              <li><a name="#wizard-1">Using the VisualVM View Template</a></li>
+                              <li><a name="#wizard-2">Using the VisualVM Application Type Template</a></li>
                             </ul>
                             <li><a href="#api">VisualVM API Reference</a>
                             <li><a href="#further">Further Reading</a></li>
