new section on wizards
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1054 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -79,10 +79,10 @@
                             <li><a href="#preparing">Preparing to Extend VisualVM</a></li>
                             <li><a href="#hello">Creating a "Hello World" Plugin</a></li>
                             <li><a href="#trouble">Troubleshooting</a></li>
-                            <li><a name="#wizard">Using VisualVM File Wizards</a></li>
+                            <li><a href="#wizard">Using VisualVM File Wizards</a></li>
                             <ul>
-                              <li><a name="#wizard-1">Using the VisualVM View Template</a></li>
-                              <li><a name="#wizard-2">Using the VisualVM Application Type Template</a></li>
+                              <li><a href="#wizard-1">Using the VisualVM View Template</a></li>
+                              <li><a href="#wizard-2">Using the VisualVM Application Type Template</a></li>
                             </ul>
                             <li><a href="#api">VisualVM API Reference</a>
                             <li><a href="#further">Further Reading</a></li>
@@ -414,6 +414,8 @@ public void uninstalled() {
         <li>Run the project, and the result should be the same as the last step
         of the previous section.
         </ol>  
+        <p>Now inspect the sources of the sample and compare them to your own
+        to see where the problem is.
         
         <h2><a name="wizard"></a>Using VisualVM File Wizards</h2>
         
