tweak for application type APIs
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1059 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -158,8 +158,8 @@
             <br><tt>com.sun.tools.visualvm.core.explorer.ExplorerActionsProvider
             <br>/javax.swing.AbstractAction</tt>
             <li>Application Types
-            <br><tt>com.sun.tools.visualvm.core.model.apptype.MainClassApplicationTypeFactory
-            <br>/com.sun.tools.visualvm.core.model.apptype.ApplicationType</tt>
+            <br><tt>com.sun.tools.visualvm.application.type.MainClassApplicationTypeFactory
+            <br>/com.sun.tools.visualvm.application.type.ApplicationType</tt>
             <li>Data Sources
             <br><tt>com.sun.tools.visualvm.core.datasource.DefaultDataSourceProvider
             <br>/com.sun.tools.visualvm.core.datasource.AbstractDataSource</tt>
