how to add a menu item
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1061 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -557,6 +557,9 @@ public class DemoAction extends SingleDataSourceAction&lt;Application&gt; {
         JOptionPane.showMessageDialog(null, "hello");
     }
 
+    //Here you can determine whether the menu item is enabled,
+    //depending on the application type that is selected. In this
+    //example, the menu item is enabled for all application types:
     @Override
     protected boolean isEnabled(Application arg0) {
         return true;
