updating api reference section
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1099 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -95,7 +95,7 @@
         <h2 class="tutorial"><a name="entry"></a>Introducing the VisualVM Entry Points</h2>
         
         <p>Entry points into VisualVM fall into the
-        following categories, each implemented by the factory pattern:
+        following categories:
         
         <ul>
             <li><b>Tab extension.</b> By default, VisualVM provides tabs
