--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,1 +1,6 @@
+<style type="text/css"> /* <![CDATA[ */
+ @import "project_tools.css";
+ /* ]]> */
+</style>
+
 <script src="project_tools.js" type="text/javascript"></script>
