--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,1 +1,3 @@
+<link rel="stylesheet" type="text/css" href="https://visualvm.dev.java.net/project_tools.css"/>
+
 <script src="project_tools.js" type="text/javascript"></script>
