--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,3 +1,115 @@
-<link rel="stylesheet" type="text/css" href="https://visualvm.dev.java.net/project_tools.css"/>
+<STYLE type="text/css">
+body {
+	padding: 0px;
+	margin: 0px;
+	font-size: 11px;
+	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+}
+
+#loginbar {
+	background: #5b83a9;
+	padding: 3px 8px 3px 8px;
+	font-size: 10px;
+	color: #c7e4f2;
+}
+
+#loginbar_message {
+	float: left;
+}
+
+#loginbar_login {
+	float: right;
+}
+
+#loginbar_clear {
+	clear: both;
+}
+
+.loginbar_link {
+	color: #c7e4f2;
+	text-decoration: underline;
+}
+
+#logo {
+        background: url("brandingtest/imgs/header_filler.png") repeat-x;
+}
+
+#menu {
+	border-top: 1px solid #5b83a9;
+	border-bottom: 1px solid #5b83a9;
+	background: #b7d4e2;
+	padding: 4px 10px 4px 10px;
+	font-size: 11px;
+}
+
+.menu_link {
+	text-decoration: none;
+	font-weight: bold;
+	padding: 4px 8px 4px 8px;
+	color: #2f4353;
+}
+
+.menu_link:hover {
+	text-decoration: none;
+	background: #2f4353;
+	color: #c7e4f2;
+}
+
+.menu_link_minor {
+	text-decoration: none;
+	padding: 4px 8px 4px 8px;
+	color: #3f5363;
+}
+
+.menu_link_minor:hover {
+	text-decoration: none;
+	background: #2f4353;
+	color: #c7e4f2;
+}
+
+.menu_link_highlight {
+	text-decoration: none;
+	font-weight: bold; 
+	border: 4px solid #c7e4f2;
+	color: #0f2333;
+}
+
+#contents {
+}
+
+#contents_main_container {
+	float: left;
+	width: 100%;
+	margin-right: -99%;
+}
+
+#contents_main {
+	margin-right: 205px;
+}
+
+#contents_bar {
+	float: right;
+	width: 200px;
+}
+
+#contents_clear {
+	clear: both;
+}
+
+.visualvm_area {
+	border: 1px solid #c0c0c0;
+	border-bottom: 1px solid #f5f5f5;
+	background: #f5f5f5;
+	margin: 6px;
+	padding-top: 3px;
+	padding-bottom: 4px;
+	padding-left: 7px;
+	padding-right: 7px;
+}
+
+#footer {
+	font-size: 10px;
+}
+</STYLE>
 
 <script src="project_tools.js" type="text/javascript"></script>
