--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -96,7 +96,7 @@ body {
 	clear: both;
 }
 
-.h2, .visualvm_area {
+h2, .visualvm_area {
 	border: 1px solid #c0c0c0;
 	border-bottom: 1px solid #f5f5f5;
 	background: #f5f5f5;
