--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,1 +1,3 @@
+<script>document.getElementById("main").parentNode.style.display="none";</script>
+
 <script src="project_tools.js" type="text/javascript"></script>
