Minor edits to fix copyright usage (mostly providing approved nouns to JVM, JDK and Java)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1133 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_remote.html
+++ b/www/applications_remote.html
@@ -25,7 +25,7 @@
         <p><b>Note:</b> To retrieve and display information on applications running on the remote host, the <tt>jstatd</tt> utility
         needs to be running on the remote host.
         To start the <tt>jstatd</tt> utility, type jstatd on the command line.
-        The <tt>jstatd</tt> utility is included as part of JDK 6.
+        The <tt>jstatd</tt> utility is included as part of Java Development Kit (JDK) version 6.
         For more on <tt>jstatd</tt>, see the following document:</p> 
         <ul><li><a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jstatd.html">jstatd - Virtual Machine jstat Daemon</a></li></ul>
        
