--- a/www/applications_window.html
+++ b/www/applications_window.html
@@ -7,7 +7,7 @@
         <h1>Using the Applications Window</h1>
         <hr />
         <p>When you start VisualVM, the Applications window is visible in the left side of the VisualVM window.
-        The Applications window uses a tree structure to enable you to quickly view the applications that are running on local and connected remote JVMs. 
+        The Applications window uses a tree structure to enable you to quickly view the applications that are running on local and connected remote JVM software instances. 
         The Applications window also displays core dumps and application snapshots.</p>
 
             
@@ -57,7 +57,7 @@
             <p><b>Note:</b> To retrieve and display information on applications running on the remote host, the <tt>jstatd</tt> utility
             needs to be running on the remote host.
             To start the utility, type <tt>jstatd</tt> on the command line.
-            The <tt>jstatd</tt> utility is included as part of JDK 6.
+            The <tt>jstatd</tt> utility is included as part of Java Development Kit (JDK) version 6.
             </p>
 
             <p>For more information about how to view data about remote applications, see the following pages:</p>
