--- a/www/coredumps.html
+++ b/www/coredumps.html
@@ -11,9 +11,8 @@
         
         <p>The Core Dump node is visible in the Applications window if VisualVM is running on Solaris or Linux.
         Generally, VisualVM can only open a core dump if the core dump was taken on the same machine.
-        A core dump contains informaton on the JDK and kernel of the machine where the core dump was taken.
-        To open the core dump in VisualVM, this information must match the JDK and kernel of the local system.
-        </p>
+        A core dump contains informaton on the Java Development Kit (JDK) and kernel of the machine where the core dump was taken.
+        To open the core dump in VisualVM, this information must match the JDK software and kernel of the local system.        </p>
         
         <p>A core dump is a binary file capturing the entire heap contents at the moment the dump is captured.
         When you load a core dump in VisualVM, a node for the core dump appears below the Core Dump node.</p>
