--- a/www/monitor_tab.html
+++ b/www/monitor_tab.html
@@ -12,7 +12,7 @@
         
         <h3>Monitoring an Application</h3>
         <p>You can use VisualVM to monitor a local application and view real-time, high-level data on the memory heap, thread activity, 
-        and the classes loaded in the VM.
+        and the classes loaded in the Java Virtual Machine (JVM).
         Monitoring an application imposes low overhead and can be used for extended periods.</p>
         
         <img src="images/docs/monitor.png" style="border:1px solid;" alt="screenshot of Monitor tab" 
@@ -21,7 +21,7 @@
         <p>Monitoring data is displayed in the following graphs:</p>
         <ul>
             <li><b>Heap.</b> The Heap graph displays the total heap size and how much of the heap is currently used. 
-            These are the figures that a Java application can obtain using the <tt>java.lang.Runtime.totalMemory()</tt>
+            These are the figures that a Java technology-based application (Java application) can obtain using the <tt>java.lang.Runtime.totalMemory()</tt>
             and java.lang.Runtime.freeMemory() calls.</li>
             <li><b>PermGen.</b> The PermGen graph displays changes in the permanent generation area over time.
             The permanent generation is the area of the heap where class and method objects are stored. 
