--- a/www/profiler.html
+++ b/www/profiler.html
@@ -21,7 +21,7 @@
         You can choose from the following profiling options:</p>
         <ul>
             <li><b>CPU Profiling.</b> Choose this to profile the performance of the application. 
-            The displayed results are the results that a Java application can obtain using the 
+            The displayed results are the results that a Java technology-based application (Java application) can obtain using the 
             <tt>java.lang.Runtime.totalMemory()</tt> and <tt>java.lang.Runtime.freeMemory()</tt> calls.</li>
             <li><b>Memory Profiling.</b> Choose this to analyze the memory usage of the application.
             The results display the objects allocated by the application and the class allocating those objects.</li>
@@ -77,7 +77,7 @@
         
         <h3>Memory Profiling</h3>
         <p>When you analyse memory usage, VisualVM starts instrumenting the loaded classes and displays the total number of objects allocated by each class (including array classes) in a table. 
-        For each class currently loaded class in the JVM, the profiling results display the size and number of objects allocated since the profiling session started.
+        For each class currently loaded class in the Java Virtual Machine (JVM), the profiling results display the size and number of objects allocated since the profiling session started.
         The results are automatically updated as new objects are allocated and as new classes are loaded.</p>
         <p>VisualVM displays the number of objects as an absolute number and as a percentage. 
         The bytes allocated are also displayed as a graph representing the percentage of bytes as well as the total number of bytes allocated by each class.
