--- a/www/threads.html
+++ b/www/threads.html
@@ -15,10 +15,10 @@
 
         <p>VisualVM displays real-time, high-level data on thread activity in the Threads tab.<br/>
         <b>Note:</b> The information displayed in the Threads tab is based on Java Management Extensions (JMX).
-        The Threads tab is visible if VisualVM can make a JMX connection with the target application and retrieve JMX instrumentation from the JVM.
-        If the target application is a local application running on JDK 1.6, the JMX connection is made automatically.
-        If the target application is not running on JDK 1.6, you may need to explicitly establish a JMX connection 
-        with the JVM. for more on establishing a JMX connection, see the following document:</p> 
+        The Threads tab is visible if VisualVM can make a JMX technology-based connection (JMX connection) with the target application and retrieve JMX instrumentation from the JVM software.
+        If the target application is a local application running on Java Development Kit (JDK) version 1.6, the JMX connection is made automatically.
+        If the target application is not running on JDK version 1.6, you may need to explicitly establish a JMX connection 
+        with the JVM software instance. For more on establishing a JMX connection, see the following document:</p> 
         <ul>
             <li><a href="jmx_connections.html">Connecting to JMX Agents Explicitly</a></li>
         </ul>
