--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -56,7 +56,7 @@ JMX agents that are running in a target Java application, a means of creating ex
     <p><img src="images/docs/add-jmx-local.png" alt="Adding a JMX connection to the local host."/></li>
   <li>The   Add JMX Connection dialog box opens.
     <p><img src="images/docs/add-jmx-connection-dialog.png" alt="The Add JMX Connection dialog." width="438" height="301" />
-  <p>The host name <span class="style1">localhost</span> is already filled in. You only need to add the port number on which the Notepad application is exposed for monitoring and management.</li>
+  <p>The host name <span class="style1">localhost</span> is already filled in. You only need to add the port number on which the  application is exposed for monitoring and management.</li>
   <li>Click OK. The JMX connection will appear in the application tree, with a special JMX connection icon. 
     <p><img src="images/docs/jmx-icon.png" alt="A JMX connection to the local host machine." width="285" height="191" /></li>
   <li>Right click on the JMX connection, and select Open. The JVM software exposed via the JMX connection can now be monitored and managed via VisualVM. 
@@ -77,7 +77,7 @@ JMX agents that are running in a target Java application, a means of creating ex
     <p><img src="images/docs/security-credentials.png" alt="JMX connector security credentials." width="405" height="167" /> </li>
   <li>If you know the correct username and password, the JMX connection will be established, and the JMX connection will appear in the application tree, with a special JMX connection icon.
   <p><img src="images/docs/remote-jmx-icon.png" alt="Remote JMX connection shown in application tree." width="285" height="224" /> </li>
-  <li>Right click on the remote JMX connection and select Open. You can now monitor and manage  remote applications via the JMX connection, and manipulate any MBeans that are registered in the MBean server exposed by this connection (note that the VisualVM-MBeans plugin must be installed if you want to access to the <a href="mbeans_tab.html">MBeans tab</a>.)<br />
+  <li>Right click on the remote JMX connection and select Open. You can now monitor and manage  remote applications via the JMX connection, and manipulate any MBeans that are registered in the MBean server exposed by this connection (note that the VisualVM-MBeans plugin must be installed if you want to access to the MBeans tab.)<br />
   <p><img src="images/docs/remote-jmx-mbeans.png" alt="MBeans in a remote MBean server." width="604" height="482" /> </li>
 </ol>
 <h2>Further Reading About JMX Technology </h2>
