--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,5 +1,5 @@
-<script>
+<script type="text/javascript">
     document.body.style.display = "none";
 </script>
 
-<script src="project_tools.js" type="text/javascript"></script>
+<script src="brandingtest/brandingtest.js" type="text/javascript"></script>
