--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -2,4 +2,4 @@
     document.body.style.display = "none";
 </script>
 
-<script src="brandingtest/brandingtest.js" type="text/javascript"></script>
+<script src="https://visualvm.dev.java.net/brandingtest/brandingtest.js" type="text/javascript"></script>
