jrehost hint improved - clearly state that VisualVM does not run on JRE
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1183 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -12,7 +12,7 @@
 <a name="jrehost"></a>
 <h3>Error Starting VisualVM Dialog Is Shown During VisualVM Startup</h3>
 <p><b>Description:&nbsp;</b>Error Starting VisualVM dialog is shown during VisualVM startup with a message about an unsupported version of Java.</p>
-<p><b>Resolution:&nbsp;&nbsp;</b>VisualVM only supports running on JDK 6.0 or 7.0. When started on JRE and/or older Java platform, VisualVM shows this dialog and terminates. To define which JDK will be used for running VisualVM, follow the steps in 
+<p><b>Resolution:&nbsp;&nbsp;</b>VisualVM runs only on JDK 6.0 or 7.0 (not the JRE). When started on JRE and/or older Java platform, VisualVM shows this dialog and terminates. To define which JDK will be used for running VisualVM, follow the steps in 
 Getting Started section of the <a href="description.html#getting_started">Introduction to VisualVM</a> document.</p><br>
 
 <a name="jpswin"></a>
