--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>Troubleshooting guide for VisualVM Beta</title>
+<title>Troubleshooting guide for VisualVM 1.0 RC</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body>
     
-<h3><font size="+1">Troubleshooting guide for VisualVM Beta</font></h3>
+<h3><font size="+1">Troubleshooting guide for VisualVM 1.0 RC</font></h3>
 <br>
 
 <a name="jrehost"></a>
