Comments from Petr/Tomas.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1186 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -20,7 +20,7 @@
                 <li><b>Open.</b> Opens the tab for the application in the main window where you can view application data.</li>
                 <li><b>Thread Dump.</b> Takes a thread dump for the application.</li>
                 <li><b>Heap Dump.</b> Takes a heap dump for the application.</li>
-                <li><b>Profile.</b> Opens the Profiler sub-tab for the application where you can choose to profile the application.</li>
+                <li><b>Profile.</b> Opens the Profiler sub-tab for the application where you can choose to profile the application. (Note that even though  VisualVM appears in the application tree,  VisualVM cannot profile itself). </li>
                 <li><b>Profiler Snapshot.</b> Creates a snapshot of the results from the profiling session.
                 The snapshot opens in the main window and a node for the snapshot appears under the application node.
                 This command is only available when VisualVM is profiling the application.</li>
