--- a/www/profiler.html
+++ b/www/profiler.html
@@ -20,9 +20,7 @@
         <p>By default the profiling tool is not running until you are ready to profile the application.
         You can choose from the following profiling options:</p>
         <ul>
-            <li><b>CPU Profiling.</b> Choose this to profile the performance of the application. 
-            The displayed results are the results that a Java technology-based application (Java application) can obtain using the 
-            <tt>java.lang.Runtime.totalMemory()</tt> and <tt>java.lang.Runtime.freeMemory()</tt> calls.</li>
+            <li><b>CPU Profiling.</b> Choose this to profile the performance of the application.</li>
             <li><b>Memory Profiling.</b> Choose this to analyze the memory usage of the application.
             The results display the objects allocated by the application and the class allocating those objects.</li>
         </ul>
