--- a/www/intro.html
+++ b/www/intro.html
@@ -13,7 +13,7 @@
         You can view data on local applications and applications that are running on remote hosts.
         You can also capture data about JVM  software instances and save the data to your local system, and view the data later or share the
         data with others.</p>
-        
+        <p>In order to benefit from all Java VisualVM's features, you should run the Java Platform, Standard Edition (Java SE) version 6. </p>
         <h3>Starting VisualVM</h3>
         <p>After you download and extract the VisualVM zip archive to your local system, navigate to the <tt>bin</tt> directory of the expanded archive
         and double-click the VisualVM executable or type the following at the command (shell) prompt:
@@ -37,7 +37,7 @@
         visible in the right side in the main window. 
         The Start Page contains links to VisualVM documentation web pages and additional resources.<br />
         <b>Note:</b> The Start Page opens by default each time you start VisualVM. 
-        You can open the Start Page at any time by choosing Help &gt; Start Page from the main menu.</p>
+        You can open the Start Page at any time by choosing Help &gt; Start Page from the main menu. You can also hide the Start page by unchecking the &quot;Show On Startup&quot; check-box. </p>
    
         <h3>Applications Window</h3>
         <p>The Applications window opens in the left side of the main VisualVM window when you launch the application.
