--- a/www/controlCustomizations.html
+++ b/www/controlCustomizations.html
@@ -17,9 +17,9 @@
     
     var html =  "Customizations currently enabled: <b>" + (customizeSite == "true" ? "YES" : "NO") + "</b><br>"
     if (customizeSite == "true")
-        html += "<a href=\"javascript:setCookie(CUSTOMIZE_SITE, 'false'); history.go(0);\">Disable customizations</a>"
+        html += "<a href=\"javascript:disableTheme();\">Disable customizations</a>"
     else
-        html += "<a href=\"javascript:setCookie(CUSTOMIZE_SITE, 'true'); history.go(0);\">Enable customizations</a>"
+        html += "<a href=\"javascript:enableTheme();\">Enable customizations</a>"
     document.write(html);
     
 </script>
