GNU Public License -> GNU General Public License
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1201 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -116,7 +116,7 @@
           <p style="margin-top: 0px; margin-bottom: 3px;">Please send us your feedback: <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.</p>
           
           <h4 style="margin-bottom: 5px;">License</h4>
-          <p style="margin-top: 0px; margin-bottom: 3px;">VisualVM is available under <a href="legal/gplv2+ce.html">GNU Public License v.2 w/Classpath Exception</a>.</p>
+          <p style="margin-top: 0px; margin-bottom: 3px;">VisualVM is available under <a href="legal/gplv2+ce.html">GNU General Public License v.2 w/Classpath Exception</a>.</p>
           
           <!--                                                               -->
           <!-- END MAIN CONTENTS AREA                                        -->
