--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -5,7 +5,7 @@
         
         <style>
             
-            #contents {
+            #body {
                 border: 0px;
                 padding: 0px;
                 margin: 0px;
@@ -62,7 +62,7 @@
                 vertical-align: bottom;
                 font-size: 12px;
                 font-weight: bold;
-                color: #333333;
+                color: #444444;
                 padding: 10px;
                 padding-left: 20px;
                 padding-right: 20px;
