--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -6,9 +6,9 @@
         <style>
             
             #body {
-                border: 0px;
-                padding: 0px;
-                margin: 0px;
+                border: 0px !important;
+                padding: 0px !important;
+                margin: 0px !important;
             }
 
             #contents table {
