Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1222 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -5,7 +5,7 @@
         
         <style>
             
-            body {
+            body, #contents, #contents table, #contents_top {
                 border: 0px !important;
                 padding: 0px !important;
                 margin: 0px !important;
