--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -5,7 +5,7 @@
         
         <style>
             
-            #contents, #contents table, #contents_top {
+            #header {
                 border: 0px !important;
                 padding: 0px !important;
                 margin: 0px !important;
