Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1237 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -102,7 +102,7 @@
                 var projectToolsLinks = projectTools.getElementsByTagName("a");
                 for (var i = 1; i < projectToolsLinks.length; i++) {
                     var projectToolsLink = projectToolsLinks[i];
-                    visualvmProjectTools.appendChild(projectToolsLink);
+                    //visualvmProjectTools.appendChild(projectToolsLink);
                     alert(projectToolsLink.innerHTML + " added to " + visualvmProjectTools);
                 }
             }
