Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1238 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -101,9 +101,11 @@
                 var projectTools = document.getElementById("projecttools");
                 var projectToolsLinks = projectTools.getElementsByTagName("a");
                 for (var i = 1; i < projectToolsLinks.length; i++) {
-                    var projectToolsLink = projectToolsLinks[i];
-                    //visualvmProjectTools.appendChild(projectToolsLink);
-                    alert(projectToolsLink.innerHTML + " added to " + visualvmProjectTools);
+                    var linkContainer = document.createElement("div");
+                    linkContainer.className = "hintLink";
+                    linkContainer.appendChild(projectToolsLinks[i]);
+                    visualvmProjectTools.appendChild(linkContainer);
+                    alert(linkContainer.innerHTML + " added");
                 }
             }
             
