Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1239 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -96,16 +96,16 @@
             }
             
             function initProjectTools() {
-                alert("Init project tools...");
                 var visualvmProjectTools = document.getElementById("visualvmprojecttools");
                 var projectTools = document.getElementById("projecttools");
                 var projectToolsLinks = projectTools.getElementsByTagName("a");
                 for (var i = 1; i < projectToolsLinks.length; i++) {
+                    alert("i=" + i + ", length=" + projectToolsLinks.length + ", current link: " + projectToolsLinks[i].innerHTML);
                     var linkContainer = document.createElement("div");
                     linkContainer.className = "hintLink";
                     linkContainer.appendChild(projectToolsLinks[i]);
                     visualvmProjectTools.appendChild(linkContainer);
-                    alert(linkContainer.innerHTML + " added");
+                    //alert(linkContainer.innerHTML + " added");
                 }
             }
             
