Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1240 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -99,7 +99,7 @@
                 var visualvmProjectTools = document.getElementById("visualvmprojecttools");
                 var projectTools = document.getElementById("projecttools");
                 var projectToolsLinks = projectTools.getElementsByTagName("a");
-                for (var i = 1; i < projectToolsLinks.length; i++) {
+                for (var i = 1; i < projectToolsLinks.length;) {
                     alert("i=" + i + ", length=" + projectToolsLinks.length + ", current link: " + projectToolsLinks[i].innerHTML);
                     var linkContainer = document.createElement("div");
                     linkContainer.className = "hintLink";
