Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1243 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -13,6 +13,7 @@
 
             #top_div table {
                 border: 0px;
+                border-bottom: 1px solid #8bb3d9;
                 padding: 0px;
                 border-collapse: collapse;
                 width: 100%;
@@ -39,15 +40,15 @@
             #top_div_links img {
                 border: 0px;
                 margin-right: 15px;
-                vertical-align: top;
+                vertical-align: middle;
             }
             
-            #top_div_links a {
+            #top_div_links a, #top_div_links a:visited {
                 display: block;
                 white-space: nowrap;
                 font-size: 20px;
                 text-decoration: none;
-                color: white;
+                color: white !important;
                 border-top: 1px solid transparent;
                 border-bottom: 1px solid transparent;
                 margin: 0px;
@@ -56,6 +57,7 @@
             }
             
             #top_div_links a:hover {
+                color: white !important;
                 background: #e36920;
                 text-decoration: none;
                 border-top: 1px solid white;
