--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -47,7 +47,7 @@
                 display: block;
                 white-space: nowrap;
                 font-size: 20px;
-                text-decoration: none;
+                text-decoration: none !important;
                 color: white !important;
                 border-top: 1px solid transparent;
                 border-bottom: 1px solid transparent;
