Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1251 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -22,7 +22,7 @@
             #top_div_info {
                 background: white url(imgs/main_background.jpg) no-repeat;
                 vertical-align: bottom;
-                font-size: 12px;
+                font-size: 13px !important;
                 font-weight: bold;
                 color: #555555;
                 padding: 10px;
