--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -96,7 +96,8 @@
             #news p {
                 margin: 0px;
                 padding: 8px;
-                padding-bottom: 4px;
+                padding-top: 4px;
+                padding-bottom: 5px;
             }
             
             span.news_date {
