Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1261 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -206,7 +206,7 @@
             // Predefined cookie controlling site customizations
             var CUSTOMIZE_SITE = "customize_site_cookie";
             var customizeSite = getCookie(CUSTOMIZE_SITE);
-            
+            alert("Customize site: " + customizeSite);
             if (customizeSite == "true") {
                 var SHOW_PROJECT_TOOLS = "show_project_tools_cookie";
                 var showToolsCookie = getCookie(SHOW_PROJECT_TOOLS);
