Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1262 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -135,6 +135,8 @@
             function setCookie(name, value) {
                 var cookie_string = name + "=" + escape(value);
                 cookie_string += "; expires=" + new Date(2020, 12, 31).toGMTString();
+                cookie_string += "; domain=visualvm.dev.java.net";
+                cookie_string += "; path=/";
                 document.cookie = cookie_string;
             }
 
