Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1263 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -142,6 +142,7 @@
 
             // Gets cookie
             function getCookie(name) {
+                alert(document.cookie);
                 var results = document.cookie.match ('(^|;) ?' + name + '=([^;]*)(;|$)');
                 if (results) return unescape(results[2]);
                 else return null;
