--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -290,7 +290,7 @@
     
     <div id="contents_hints">
         
-        <h3>Users</h3>
+        <h3 class="first">Users</h3>
         <div class="users">
             <a href="#">Getting Started</a>
             <a href="#">Troubleshooting Guide</a>
